force-app/main/default/objects/SAP_Interfaced_Data_Item__c/fields/PMI_Actual__c.field-meta.xml
<CustomField>
    <fullName>PMI_Actual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMI Actual</label>
    <referenceTo>PMI_Actual__c</referenceTo>
    <relationshipLabel>SAP Interfaced Data Items</relationshipLabel>
    <relationshipName>SAP_Interfaced_Data_Items</relationshipName>
    <type>Lookup</type>
</CustomField>