force-app/main/default/objects/SAP_Interfaced_Data_Item__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <formula>IF(OR(SAP_Interfaced_Data__r.RecordType.DeveloperName =&apos;Sample_Order_TWN&apos;, SAP_Interfaced_Data__r.RecordType.DeveloperName =&apos;Sample_Order_MEX&apos;, TEXT( SAP_Interfaced_Data__r.Classification__c ) = &apos;AU6-Ecomm Sample Orders&apos;), &apos;BO&apos;, &apos;CS&apos;)</formula>
    <label>Unit of Measure</label>
    <type>Text</type>
</CustomField>