force-app/main/default/objects/SAP_Interfaced_Data_Item__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <formula>IF( Unit_of_Measure__c = &apos;BO&apos;, Quantity__c, Pack_Quantity__c * Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>